test/ui/tests/cannot-apply.stderr
error[E031]: type mismatch
 --> ${TEST_FOLDER}/cannot-apply.lushui:3:21
  |
3 | Abomination: Type = 0 1
  |                     ^ has wrong type
  |
 --> ${TEST_FOLDER}/cannot-apply.lushui:3:23
  |
3 | Abomination: Type = 0 1
  |                       - applied to this
  |
 note: expected type `_ -> _`
        but got type `extern.core.nat.Nat`

error: aborting due to previous error

